<resources>
    <string name="app_name">Ramadany</string>
    <string name="editText_email">Email</string>
    <string name="editText_pass">Password</string>
    <string name="button_login">LOGIN</string>
    <string name="signUp">Sign Up</string>
    <string name="imageview_desc">OS img</string>
    <string name="textview_list">OS</string>
    <string name="Name">Name</string>
    <string name="Re_password">Re-type Password</string>
    <string name="Channel">Channel:</string>
    <string name="DisplayTime">Display Time:</string>
    <string name="ReDisplayTime">Re-Display Time:</string>
    <string name="MainStars">Main Stars:</string>
    <string name="BriefDescription">Brief Description:</string>
    <string name="Promo">Promo:</string>
    <array name="list">
        <item>Android</item>
        <item>iPhone</item>
        <item>Windows</item>
        <item>Blackberry</item>
        <item>Linux</item>
    </array>
</resources>
